# temgen

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: cuau_101010.yaml
data/: dataLog.txt
scripts/: build_hdf5.sh  dry_run.py  train.py  train.sh
temgen/: __init__.py
temgen/data/: __init__.py  build_hdf5.py  cuau_dataset.py
temgen/eval/: __init__.py  retrieval.py
temgen/models/: __init__.py  temgen_model.py
temgen/models/image_encoder/: __init__.py  aggregator.py  cnn_frontend.py  cross_view_voxel_aggregator.py  geometry_aware_aggregator.py  geometry_tokens.py
temgen/models/losses/: __init__.py  info_nce.py
temgen/models/structure_encoder/: __init__.py  gnn.py  graph_builder.py
temgen/training/: callbacks.py  lightning_module.py
