[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temgen"
version = "0.1.0"
description = "TEM diffraction + crystal structure contrastive learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dongin"},
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torch-geometric>=2.4.0",
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.18",
    "pytorch-lightning>=2.1.0",
    "omegaconf>=2.3.0",
    "h5py>=3.10.0",
    "zarr>=2.16.0",
    "numpy>=1.24.0",
    "pymatgen>=2023.11.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["temgen*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"